--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
     "@tanstack/react-query": "^5.90.16",
+    "@tanstack/react-table": "^8.21.3",
     "@types/leaflet": "^1.9.21",
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
